# Health-App

./: CMakeLists.txt  HeatBeat.qml  LoginPage.qml  LoginPage.qml.autosave  Main.qml  MainPage.qml  PatientPage.qml  README.md  main.cpp  usermanager.cpp  usermanager.hpp
